Fix build job list alignment issue

--- a/app/styles/app/layouts/jobs.scss
+++ b/app/styles/app/layouts/jobs.scss
@@ -31,6 +31,7 @@
       justify-content: flex-start;
       align-items: center;
       height: 34px;
+      min-width: 0;
     }
   }
 
